--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
     "multer": "^2.0.2",
-    "next": "15.5.6",
+    "next": "^16.0.1",
     "nodemailer": "^7.0.10",
     "react": "18.3.1",
     "react-dom": "18.3.1",
