--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.2",
     "multer": "^2.0.2",
-    "next": "^16.0.1",
+    "next": "^16.0.10",
     "nodemailer": "^7.0.10",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -41,8 +41,9 @@
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
     "babel-plugin-react-compiler": "1.0.0",
+    "baseline-browser-mapping": "^2.9.9",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0",
+    "eslint-config-next": "^16.0.10",
     "tailwindcss": "^4",
     "typescript": "5.9.3"
   }
